--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>vue-vuex-grupo06</title>
   </head>
   <body>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
